[package]
name = "pw-core"
version = "0.1.0"
edition = "2024"
authors = ["PromptWallet Team"]
description = "Shared types for PromptWallet - OpenAI-compatible chat API types, artifacts, and extensions"
license = "MIT"
repository = "https://github.com/rust-promptwallet/pw-core"
keywords = ["openai", "llm", "chat", "ai", "api"]
categories = ["api-bindings", "data-structures"]
readme = "README.md"

[dependencies]
# Serialization - required for all types
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID for artifact IDs
uuid = { version = "1", features = ["v4", "serde"] }

# DateTime support
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
# Enable this in server context for sqlx derives
sqlx = ["dep:sqlx"]

[dependencies.sqlx]
version = "0.8"
features = ["postgres"]
optional = true

[dev-dependencies]
pretty_assertions = "1"
